FActualizacion de flujo de mi programa